# maral

./: .gitignore  CMakeLists.txt  Doxyfile  Magma.cbp  Makefile  Maral.cbp  Maral.sln  Maral.vcxproj  Maral.workspace  install.txt  make_tag.sh  readme.txt
src/: CMakeLists.txt  atom.hpp  core.hpp  hierarchical.hpp  hierarchical.ipp  inserters.ipp  magma.hpp  maral.hpp  molecule.hpp  policies.hpp  root.hpp  traits.hpp  units.hpp
src/Magma/: Magma.hpp  MtlDefines.hpp  MtlDefines.inl  MtlMatrix.hpp  MtlMatrix.inl  MtlMatrixOps.inl  MtlOutput.hpp  MtlOutput.inl  MtlPoint.hpp  MtlPoint.inl  MtlPointOps.inl  MtlVector.hpp  MtlVector.inl  MtlVectorOps.hpp  MtlVectorOps.inl
src/maral/: atom.hpp  component.hpp  components.hpp  format.hpp  has_policy.hpp  hierarchical.hpp  hierarchical.ipp  iomanip.hpp  iomanip.ipp  make.hpp  model.hpp  molecule.hpp  node.hpp  policies.hpp  root.hpp  submolecule.hpp  traits.hpp  units.hpp
src/maral/algorithms/: connect.hpp  distance.hpp  remove.hpp  remove_if.hpp
src/maral/bootstraps/: basic.hpp  bs_pdb.hpp  bs_pdb_multimodel.hpp  default.hpp  pdb.hpp  pdb_multimodel.hpp
src/maral/components/: atomic_number.hpp  atomic_number.ipp  coordinates.hpp  covalent_radius.ipp  formal_charge.hpp  order.hpp  partial_charge.hpp  position.hpp
src/maral/ioformats/: pdb.hpp  pdb.ipp  tree.hpp  tree.ipp
src/maral/mtl/: inserters.hpp  iomanip.hpp  matrix.hpp  mtl.hpp  point.hpp  point_ops.ipp  vector_ops.ipp
src/maral/policies/: b_factor.hpp  chainid.hpp  coordinates.hpp  icode.hpp  linked_position.hpp  named.hpp  occupancy.hpp  ordered.hpp  partial_charge.hpp  position.hpp
src/mtl/: defines.hpp  defines.ipp  extractors.hpp  extractors.ipp  inserters.hpp  inserters.ipp  iomanip.hpp  matrix.hpp  matrix.ipp  matrix_ops.hpp  matrix_ops.ipp  mtl.hpp  output.hpp  output.ipp  point.hpp  point_ops.hpp  point_ops.ipp  vector.hpp  vector.ipp  vector_ops.hpp  vector_ops.ipp
src/policies/: named.hpp  ordered.hpp  position.hpp
tags/0./: Maral.workspace
tags/0./test/: test_ioformat_pdb.cpp  test_mtl_vector.cpp
tags/0.1.0.0/: Magma.cbp  Magma.vcxproj
tags/0.1.0.0/test/: MtlData.hpp
tags/0.2.0.0/: Makefile
tags/0.2.0.0/test/: mtl_matrices.cpp  test.cbp
tags/0.2.1.1/: Magma.sln
tags/0.2.1.1/test/: mtl_vectors.cpp
tags/0.2.2.0/: Magma.workspace
tags/0.2.2.0/src/: magma.hpp
tags/0.2.2.0/test/: mtl_matrices.cpp  mtl_points.cpp  mtl_vectors.cpp  test.cbp
tags/0.2.3.0/src/: core.hpp
tags/0.2.3.0/test/: maral_core.cpp
tags/0.2.3.1/: Maral.vcxproj  boost_install.txt
tags/0.2.3.1/src/: core.hpp
tags/0.2.3.2/test/: test.cbp
tags/0.2.4.0/src/: core.hpp
tags/0.2.4.0/test/: Makefile  maral_core.cpp  mtl_points.cpp
tags/0.2.5.0/: Maral.cbp
tags/0.2.5.0/src/: hierarchical.ipp  maral.hpp  output.hpp
tags/0.2.5.0/test/: mtl_matrices.cpp
tags/0.2.6.0/test/: Makefile
tags/0.2.7.0/: Doxyfile  Maral.cbp
tags/0.2.7.0/src/: hierarchical.hpp
tags/0.2.7.0/test/: mtl_matrices.cpp  mtl_points.cpp  test.vcxproj
tags/0.2.8.0/src/: atom.hpp  policies.hpp
tags/0.2.8.0/test/: mtl_matrices.cpp  mtl_vectors.cpp
tags/0.2.9.0/: Maral.cbp
tags/0.2.9.0/src/: atom.hpp  molecule.hpp  traits.hpp
tags/0.2.9.0/test/: Makefile  mtl_points.cpp
tags/0.3.0.0/: Maral.cbp  Maral.sln  Maral.vcxproj
tags/0.3.0.0/test/: mtl_data.hpp  test_mtl_vectors.cpp
tags/0.3.1.0/: Maral.cbp  Maral.sln  Maral.vcxproj  Maral.workspace
tags/0.3.1.0/test/: test_hierarchical_datamodel.cpp  test_mtl_point.cpp  test_mtl_vector.cpp
tags/0.3.2.0/test/: Makefile  test_ioformat_pdb.cbp  test_ioformat_pdb.cpp  test_ioformat_tree.cpp
tags/0.3.3.0/: Maral.sln
tags/0.3.4.0/: Maral.sln  make_tag.sh
tags/0.3.4.0/test/: test_hierarchical_datamodel.cpp  test_ioformat_tree.cpp  test_mtl_matrix.cbp  test_property_sheet.props
tags/0.3.5.0/: Maral.cbp  Maral.vcxproj  boost_install.txt
tags/0.3.5.0/test/: test_hierarchical_datamodel.cbp  test_mtl_point.cbp  test_mtl_vector.cbp
tags/0.3.6.0/: Doxyfile  Maral.cbp  Maral.vcxproj
tags/0.3.6.0/test/: test_hierarchical_datamodel.cpp  test_ioformat_pdb.cpp  (+3 more)
tags/0.3.7.0/: Makefile  Maral.cbp
tags/0.3.9.0/: Maral.cbp
test/: CMakeLists.txt  Makefile  MtlData.hpp  MtlMatrices.cpp  MtlPoints.cpp  MtlVectors.cpp  maral_core.cpp  maral_h_model.cpp  mtl_matrices.cpp  mtl_points.cpp  mtl_vectors.cpp  test.cbp  test.vcxproj  test_connections.cbp  test_connections_config.hpp  test_h_model.cpp  test_hierarchical_datamodel.cpp  test_ioformat_pdb.cbp  test_ioformat_pdb.cpp  test_ioformat_pdb_multimodel.cpp  test_ioformat_pdb_mutlimodel.cbp  test_ioformat_tree.cpp  test_mtl_matrix.cpp  test_mtl_point.cpp  test_mtl_points.cpp  test_mtl_vector.cpp  test_mtl_vectors.cpp  test_property_sheet.props
test/patterns/: 1CRN_tree.txt  3NY8_tree.txt  3SDY_tree.txt  composite_erase.txt  composite_insert.txt  composite_remove.txt  iterator_boost_range.txt  iterator_copy.txt  matrix22.txt  matrix44.txt  no_chain_no_res_tree.txt  root_tree.txt  type_iterator_boost_range.txt  type_iterator_copy.txt
test/test_connections/: test_connections.vcxproj
test/test_ioformat_pdb/: test_ioformat_pdb.vcxproj
test/test_mtl_vector/: test_mtl_vector.vcxproj
trunk/: Doxyfile  Magma.cbp  Magma.sln  Magma.vcxproj  Makefile  Maral.cbp  Maral.sln  Maral.vcxproj  Maral.workspace  boost_install.txt  install.txt  make_tag.sh
trunk/src/: atom.hpp  core.hpp  hierarchical.hpp  hierarchical.ipp  inserters.hpp  magma.hpp  maral.hpp  molecule.hpp  node.hpp  output.ipp  policies.hpp  root.hpp  traits.hpp
trunk/test/: Makefile  MtlMatrices.cpp  MtlPoints.cpp  MtlVectors.cpp  magma_core.cpp  maral_core.cpp  maral_h_model.cpp  mtl_data.hpp  mtl_matrices.cpp  mtl_points.cpp  mtl_vectors.cpp  test.cbp  test.vcxproj  test_connections.cpp  test_h_model.cpp  test_hierarchical_datamodel.cbp  test_hierarchical_datamodel.cpp  test_ioformat_pdb.cbp  test_ioformat_pdb.cpp  test_ioformat_pdb_multimodel.cpp  test_ioformat_tree.cbp  test_ioformat_tree.cpp  test_mtl_matrices.cpp  test_mtl_matrix.cpp  test_mtl_point.cpp  test_mtl_points.cpp  test_mtl_vector.cpp  test_mtl_vectors.cpp
(+297 files in other folders)
